k8s/wordpress/01-wp-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              preference:
                matchExpressions:
                  - key: tier
                    operator: In
                    values: ["high"]
            - weight: 80
              preference:
                matchExpressions:
                  - key: tier
                    operator: In
                    values: ["medium-high"]
            - weight: 60
              preference:
                matchExpressions:
                  - key: tier
                    operator: In
                    values: ["medium"]
      volumes:
        - name: wp
          persistentVolumeClaim:
            claimName: wp-pv-claim
        - name: tools
          emptyDir: {}
        #        - name: php-ext
        #          emptyDir: {}
        - name: php-fpm-config
          configMap:
            name: php-fpm-config
      containers:
        - name: wordpress
          image: wordpress:php8.5-fpm-alpine
          ports:
            - containerPort: 9000
              protocol: TCP
          volumeMounts:
            - name: wp
              mountPath: /var/www/html
            - name: tools
              mountPath: /tools
            #           - name: php-ext
            #             mountPath: /usr/local/etc/php/conf.d/zz-redis.ini
            #             subPath: zz-redis.ini
            - name: php-fpm-config
              mountPath: /usr/local/etc/php-fpm.d/zz-docker.conf
              subPath: zz-docker.conf
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "1000m"
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: default
spec:
  selector:
    app: wordpress
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
  type: ClusterIP
