k8s/wordpress/03-nginx_wp-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-wp
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-wp
  template:
    metadata:
      labels:
        app: nginx-wp
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            preference:
              matchExpressions:
              - key: tier
                operator: In
                values: ["high"]
          - weight: 80
            preference:
              matchExpressions:
              - key: tier
                operator: In
                values: ["medium-high"]
          - weight: 60
            preference:
              matchExpressions:
              - key: tier
                operator: In
                values: ["medium"]
          - weight: 40
            preference:
              matchExpressions:
              - key: tier
                operator: In
                values: ["low"]
      volumes:
        - name: nginx-config
          configMap:
            name: nginx-wp-config
        - name: wp
          persistentVolumeClaim:
            claimName: wp-pv-claim
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 80
              protocol: TCP
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d
            - name: wp
              mountPath: /var/www/html
              readOnly: true
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-wp
  namespace: default
spec:
  selector:
    app: nginx-wp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
